--- a/src/scss/components/desktop/_RecipeCard.scss
+++ b/src/scss/components/desktop/_RecipeCard.scss
@@ -12,8 +12,8 @@
         cursor: pointer;
         transition: width 0.3s, height 0.3s;
         &:hover {
-            width: 820px;
-            height: 260px;
+            // width: 820px;
+            height: 280px;
         }
 
         .thumbnail {
