--- a/src/scss/components/desktop/_RecipePopup.scss
+++ b/src/scss/components/desktop/_RecipePopup.scss
@@ -20,25 +20,104 @@
         }
 
         .popup-inner {
-            // display: flex;
-            // flex-direction: column;
-            // align-items: center;
-            // justify-content: center;
             &.popup-left {
                 width: 420px;
                 padding-right: 20px;
                 border-right: 1px dashed #9999CC;
-    
+                color: #42493A;
+                h2 {
+                    font-size: 32px;
+                    font-weight: 700;
+                    padding: 40px 0 30px;
+                }
                 .popup-img {
                     width: 400px;
                     height: 400px;
-                    background-color: rgba(0, 0, 0, .2);
+                    background-color: rgba(0, 0, 0, .1);
+                    img{ 
+                        width: 400px;
+                        height: 400px;
+                    }
+                }
+                .star {
+                    position: relative;
+                    width: 100%;
+                    height: 50px;
+                    margin: 20px 0 0;
+                    button {
+                        position: absolute;
+                        right: 0;
+                        font-size: 32px;
+                        width: 50px;
+                        height: 50px;
+                        border: none;
+                        background-color: #fff;
+                        cursor: pointer;
+                    }
+                }
+                .info {
+                    padding: 0px 20px 10px;
+                    font-size: 24px;
+                    li {
+                        display: flex;
+                        align-items: center;
+                        margin-bottom: 10px;
+                        .popup-icon {
+                            margin-right: 20px;
+                        }
+                    }
                 }
             }
+            
             &.popup-right {
                 width: 700px;
                 padding-left: 20px;
                 // border: 2px dashed purple;
+
+                .right-inner {
+                    display: flex;
+                    padding: 10px;
+                    font-size: 18px;
+                    border-bottom: 1px dashed #E79A5B;
+                    &:last-child {
+                        border: none;
+                    }
+
+                    h3 {
+                        width: 240px;
+                        color: #42493A;
+                        font-size: 20px;
+                        font-weight: 700;
+                        .popup-icon {
+                            margin-right: 12px;
+                            color: #FF6F4A;
+                        }
+                    }
+                    a {
+                        color: #007EB2;
+                        display: flex;
+                        align-items: center;
+                        .popup-icon {
+                            margin-right: 10px;
+                        }
+                    }
+                    ul {
+                        li {
+                            margin-bottom: 10px;
+                        }
+                        &.diet-labels,
+                        &.health-labels {
+                            display: grid;
+                            grid-template-columns: repeat(2, 1fr);
+                            li {
+                                margin-right: 20px;
+
+                            }
+                        }
+                    }
+
+                }
+
             }
         }
 
