--- a/src/scss/pages/desktop/_Recipes.scss
+++ b/src/scss/pages/desktop/_Recipes.scss
@@ -131,9 +131,14 @@
                         }
                         select {
                             height: 24px;
-                            padding: 0 10px ;
+                            padding: 0 10px;
+                            color: rgba(0, 0, 0, .8);
                             border-radius: 12px;
-                            border: 1px solid rgba(0, 0, 0, 0.2);
+                            box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, .08);
+                            border: none;
+                            &:focus {
+                                outline: none;
+                            }
                         }
                         & > div {
                             margin-bottom: 10px;
@@ -145,7 +150,9 @@
                                 height: 24px;
                                 padding: 0 10px;
                                 border-radius: 12px;
-                                border: 1px solid rgba(0, 0, 0, 0.2);
+                                color: rgba(0, 0, 0, .8);
+                                box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, .08);
+                                border: none;
                             }
                         }
                     }
